# egui-chat-client

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/net/: client.rs  commands.rs  connection.rs  mod.rs
