[package]
name = "chat-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "*"
eframe = { version = "*", features = [ "persistence" ] }
tracing-subscriber = "*"
serde = "*"
tokio = { version = "*", features = [ "full" ] }